// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collectFbt When using string templates should extract correctly multiple params 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 86,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "counting",
          "text": "{1} {2} {2} 3",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly name, pronoun, plural (react native) 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 119,
      "jsfbt": Object {
        "m": Array [
          Object {
            "token": "name",
            "type": 1,
          },
          Object {
            "type": 3,
          },
          Object {
            "type": 2,
          },
        ],
        "t": Object {
          "*": Object {
            "*": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells their items",
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells their item",
              },
            },
            "1": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells her items",
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells her item",
              },
            },
            "2": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells his items",
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells his item",
              },
            },
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly name, pronoun, plural 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 119,
      "jsfbt": Object {
        "m": Array [
          Object {
            "token": "name",
            "type": 1,
          },
          null,
          null,
        ],
        "t": Object {
          "*": Object {
            "*": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells their items",
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells their item",
              },
            },
            "1": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells her items",
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells her item",
              },
            },
            "2": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells his items",
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells his item",
              },
            },
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly supports tables ie fbt:enum 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 37,
      "jsfbt": Object {
        "m": Array [
          null,
        ],
        "t": Object {
          "0": Object {
            "desc": "counting",
            "text": "a {2} {2} 3",
          },
          "1": Object {
            "desc": "counting",
            "text": "b {2} {2} 3",
          },
        },
      },
      "line_beg": 3,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with a param 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 52,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "great",
          "text": "testing {it} works",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with just string contents 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 19,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "ok",
          "text": "simple",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with the param being first 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 49,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "well",
          "text": "{it} still works",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt fbt nodes: should expose the FbtElementNodes when needed 1`] = `
Object {
  "childParentMappings": Object {
    "1": 0,
  },
  "fbtElementNodes": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
            },
          ],
          "phraseIndex": 1,
          "type": "implicitParam",
          "wrapperNode": Object {
            "babelNode": Object {
              "attributes": Array [
                Object {
                  "end": 119,
                  "loc": Object {
                    "end": Object {
                      "column": 36,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 4,
                    },
                  },
                  "name": Object {
                    "end": 107,
                    "loc": Object {
                      "end": Object {
                        "column": 24,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 15,
                        "line": 4,
                      },
                    },
                    "name": "className",
                    "start": 98,
                    "type": "JSXIdentifier",
                  },
                  "start": 98,
                  "type": "JSXAttribute",
                  "value": Object {
                    "end": 119,
                    "extra": Object {
                      "raw": "\\"neatoLink\\"",
                      "rawValue": "neatoLink",
                    },
                    "loc": Object {
                      "end": Object {
                        "column": 36,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 25,
                        "line": 4,
                      },
                    },
                    "start": 108,
                    "type": "StringLiteral",
                    "value": "neatoLink",
                  },
                },
                Object {
                  "end": 151,
                  "loc": Object {
                    "end": Object {
                      "column": 68,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 37,
                      "line": 4,
                    },
                  },
                  "name": Object {
                    "end": 124,
                    "loc": Object {
                      "end": Object {
                        "column": 41,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 37,
                        "line": 4,
                      },
                    },
                    "name": "href",
                    "start": 120,
                    "type": "JSXIdentifier",
                  },
                  "start": 120,
                  "type": "JSXAttribute",
                  "value": Object {
                    "end": 151,
                    "extra": Object {
                      "raw": "\\"https://somewhere.random\\"",
                      "rawValue": "https://somewhere.random",
                    },
                    "loc": Object {
                      "end": Object {
                        "column": 68,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 42,
                        "line": 4,
                      },
                    },
                    "start": 125,
                    "type": "StringLiteral",
                    "value": "https://somewhere.random",
                  },
                },
                Object {
                  "end": 166,
                  "loc": Object {
                    "end": Object {
                      "column": 83,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 69,
                      "line": 4,
                    },
                  },
                  "name": Object {
                    "end": 160,
                    "loc": Object {
                      "end": Object {
                        "column": 77,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 69,
                        "line": 4,
                      },
                    },
                    "name": "tabindex",
                    "start": 152,
                    "type": "JSXIdentifier",
                  },
                  "start": 152,
                  "type": "JSXAttribute",
                  "value": Object {
                    "end": 166,
                    "expression": Object {
                      "end": 165,
                      "extra": Object {
                        "raw": "123",
                        "rawValue": 123,
                      },
                      "loc": Object {
                        "end": Object {
                          "column": 82,
                          "line": 4,
                        },
                        "start": Object {
                          "column": 79,
                          "line": 4,
                        },
                      },
                      "start": 162,
                      "type": "NumericLiteral",
                      "value": 123,
                    },
                    "loc": Object {
                      "end": Object {
                        "column": 83,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 78,
                        "line": 4,
                      },
                    },
                    "start": 161,
                    "type": "JSXExpressionContainer",
                  },
                },
                Object {
                  "end": 178,
                  "loc": Object {
                    "end": Object {
                      "column": 95,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 84,
                      "line": 4,
                    },
                  },
                  "name": Object {
                    "end": 169,
                    "loc": Object {
                      "end": Object {
                        "column": 86,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 84,
                        "line": 4,
                      },
                    },
                    "name": "id",
                    "start": 167,
                    "type": "JSXIdentifier",
                  },
                  "start": 167,
                  "type": "JSXAttribute",
                  "value": Object {
                    "end": 178,
                    "expression": Object {
                      "end": 177,
                      "extra": Object {
                        "raw": "\\"uniq\\"",
                        "rawValue": "uniq",
                      },
                      "loc": Object {
                        "end": Object {
                          "column": 94,
                          "line": 4,
                        },
                        "start": Object {
                          "column": 88,
                          "line": 4,
                        },
                      },
                      "start": 171,
                      "type": "StringLiteral",
                      "value": "uniq",
                    },
                    "loc": Object {
                      "end": Object {
                        "column": 95,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 87,
                        "line": 4,
                      },
                    },
                    "start": 170,
                    "type": "JSXExpressionContainer",
                  },
                },
              ],
              "end": 179,
              "loc": Object {
                "end": Object {
                  "column": 96,
                  "line": 4,
                },
                "start": Object {
                  "column": 12,
                  "line": 4,
                },
              },
              "name": Object {
                "end": 97,
                "loc": Object {
                  "end": Object {
                    "column": 14,
                    "line": 4,
                  },
                  "start": Object {
                    "column": 13,
                    "line": 4,
                  },
                },
                "name": "a",
                "start": 96,
                "type": "JSXIdentifier",
              },
              "selfClosing": false,
              "start": 95,
              "type": "JSXOpeningElement",
            },
            "props": Object {
              "className": "neatoLink",
              "href": "https://somewhere.random",
              "tabindex": 123,
            },
            "type": "a",
          },
        },
      ],
      "phraseIndex": 0,
      "type": "element",
    },
  ],
  "phrases": Array [
    Object {
      "col_beg": 10,
      "col_end": 16,
      "hashToLeaf": Object {
        "6CzFRF22gqmcMT9hNd4lFQ==": Object {
          "desc": "some desc",
          "text": "This is a {=link}",
        },
      },
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "some desc",
          "text": "This is a {=link}",
          "tokenAliases": Object {
            "=link": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 7,
      "project": "",
    },
    Object {
      "col_beg": 12,
      "col_end": 16,
      "hashToLeaf": Object {
        "vInz7SvwK8Zthis7azxV9Q==": Object {
          "desc": "In the phrase: \\"This is a {=link}\\"",
          "text": "link",
        },
      },
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "In the phrase: \\"This is a {=link}\\"",
          "text": "link",
        },
      },
      "line_beg": 4,
      "line_end": 6,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt fbt nodes: should expose the FbtElementNodes where there are two nested React elements 1`] = `
Object {
  "childParentMappings": Object {
    "1": 0,
    "2": 1,
  },
  "fbtElementNodes": Array [
    Object {
      "children": Array [
        Object {
          "type": "param",
        },
        Object {
          "type": "text",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                },
                Object {
                  "type": "plural",
                },
                Object {
                  "type": "text",
                },
              ],
              "phraseIndex": 2,
              "type": "implicitParam",
              "wrapperNode": Object {
                "babelNode": Object {
                  "attributes": Array [],
                  "end": 320,
                  "loc": Object {
                    "end": Object {
                      "column": 20,
                      "line": 8,
                    },
                    "start": Object {
                      "column": 12,
                      "line": 8,
                    },
                  },
                  "name": Object {
                    "end": 319,
                    "loc": Object {
                      "end": Object {
                        "column": 19,
                        "line": 8,
                      },
                      "start": Object {
                        "column": 13,
                        "line": 8,
                      },
                    },
                    "name": "strong",
                    "start": 313,
                    "type": "JSXIdentifier",
                  },
                  "selfClosing": false,
                  "start": 312,
                  "type": "JSXOpeningElement",
                },
                "props": Object {},
                "type": "strong",
              },
            },
            Object {
              "type": "text",
            },
          ],
          "phraseIndex": 1,
          "type": "implicitParam",
          "wrapperNode": Object {
            "babelNode": Object {
              "attributes": Array [
                Object {
                  "end": 262,
                  "loc": Object {
                    "end": Object {
                      "column": 34,
                      "line": 7,
                    },
                    "start": Object {
                      "column": 13,
                      "line": 7,
                    },
                  },
                  "name": Object {
                    "end": 250,
                    "loc": Object {
                      "end": Object {
                        "column": 22,
                        "line": 7,
                      },
                      "start": Object {
                        "column": 13,
                        "line": 7,
                      },
                    },
                    "name": "className",
                    "start": 241,
                    "type": "JSXIdentifier",
                  },
                  "start": 241,
                  "type": "JSXAttribute",
                  "value": Object {
                    "end": 262,
                    "extra": Object {
                      "raw": "\\"neatoLink\\"",
                      "rawValue": "neatoLink",
                    },
                    "loc": Object {
                      "end": Object {
                        "column": 34,
                        "line": 7,
                      },
                      "start": Object {
                        "column": 23,
                        "line": 7,
                      },
                    },
                    "start": 251,
                    "type": "StringLiteral",
                    "value": "neatoLink",
                  },
                },
                Object {
                  "end": 271,
                  "loc": Object {
                    "end": Object {
                      "column": 43,
                      "line": 7,
                    },
                    "start": Object {
                      "column": 35,
                      "line": 7,
                    },
                  },
                  "name": Object {
                    "end": 267,
                    "loc": Object {
                      "end": Object {
                        "column": 39,
                        "line": 7,
                      },
                      "start": Object {
                        "column": 35,
                        "line": 7,
                      },
                    },
                    "name": "href",
                    "start": 263,
                    "type": "JSXIdentifier",
                  },
                  "start": 263,
                  "type": "JSXAttribute",
                  "value": Object {
                    "end": 271,
                    "extra": Object {
                      "raw": "\\"#\\"",
                      "rawValue": "#",
                    },
                    "loc": Object {
                      "end": Object {
                        "column": 43,
                        "line": 7,
                      },
                      "start": Object {
                        "column": 40,
                        "line": 7,
                      },
                    },
                    "start": 268,
                    "type": "StringLiteral",
                    "value": "#",
                  },
                },
                Object {
                  "end": 286,
                  "loc": Object {
                    "end": Object {
                      "column": 58,
                      "line": 7,
                    },
                    "start": Object {
                      "column": 44,
                      "line": 7,
                    },
                  },
                  "name": Object {
                    "end": 280,
                    "loc": Object {
                      "end": Object {
                        "column": 52,
                        "line": 7,
                      },
                      "start": Object {
                        "column": 44,
                        "line": 7,
                      },
                    },
                    "name": "tabindex",
                    "start": 272,
                    "type": "JSXIdentifier",
                  },
                  "start": 272,
                  "type": "JSXAttribute",
                  "value": Object {
                    "end": 286,
                    "expression": Object {
                      "end": 285,
                      "extra": Object {
                        "raw": "123",
                        "rawValue": 123,
                      },
                      "loc": Object {
                        "end": Object {
                          "column": 57,
                          "line": 7,
                        },
                        "start": Object {
                          "column": 54,
                          "line": 7,
                        },
                      },
                      "start": 282,
                      "type": "NumericLiteral",
                      "value": 123,
                    },
                    "loc": Object {
                      "end": Object {
                        "column": 58,
                        "line": 7,
                      },
                      "start": Object {
                        "column": 53,
                        "line": 7,
                      },
                    },
                    "start": 281,
                    "type": "JSXExpressionContainer",
                  },
                },
                Object {
                  "end": 298,
                  "loc": Object {
                    "end": Object {
                      "column": 70,
                      "line": 7,
                    },
                    "start": Object {
                      "column": 59,
                      "line": 7,
                    },
                  },
                  "name": Object {
                    "end": 289,
                    "loc": Object {
                      "end": Object {
                        "column": 61,
                        "line": 7,
                      },
                      "start": Object {
                        "column": 59,
                        "line": 7,
                      },
                    },
                    "name": "id",
                    "start": 287,
                    "type": "JSXIdentifier",
                  },
                  "start": 287,
                  "type": "JSXAttribute",
                  "value": Object {
                    "end": 298,
                    "expression": Object {
                      "end": 297,
                      "extra": Object {
                        "raw": "\\"uniq\\"",
                        "rawValue": "uniq",
                      },
                      "loc": Object {
                        "end": Object {
                          "column": 69,
                          "line": 7,
                        },
                        "start": Object {
                          "column": 63,
                          "line": 7,
                        },
                      },
                      "start": 291,
                      "type": "StringLiteral",
                      "value": "uniq",
                    },
                    "loc": Object {
                      "end": Object {
                        "column": 70,
                        "line": 7,
                      },
                      "start": Object {
                        "column": 62,
                        "line": 7,
                      },
                    },
                    "start": 290,
                    "type": "JSXExpressionContainer",
                  },
                },
              ],
              "end": 299,
              "loc": Object {
                "end": Object {
                  "column": 71,
                  "line": 7,
                },
                "start": Object {
                  "column": 10,
                  "line": 7,
                },
              },
              "name": Object {
                "end": 240,
                "loc": Object {
                  "end": Object {
                    "column": 12,
                    "line": 7,
                  },
                  "start": Object {
                    "column": 11,
                    "line": 7,
                  },
                },
                "name": "a",
                "start": 239,
                "type": "JSXIdentifier",
              },
              "selfClosing": false,
              "start": 238,
              "type": "JSXOpeningElement",
            },
            "props": Object {
              "className": "neatoLink",
              "href": "#",
              "tabindex": 123,
            },
            "type": "a",
          },
        },
        Object {
          "type": "text",
        },
      ],
      "phraseIndex": 0,
      "type": "element",
    },
  ],
  "phrases": Array [
    Object {
      "col_beg": 8,
      "col_end": 14,
      "hashToLeaf": Object {
        "PqPPir8Kg9xSlqdednPFOg==": Object {
          "desc": "example 1",
          "text": "{name} has shared {=a photo} with you",
        },
        "gVKMc/8jq5vnYR5v2bb32g==": Object {
          "desc": "example 1",
          "text": "{name} has shared {=[number] photos} with you",
        },
      },
      "jsfbt": Object {
        "m": Array [
          Object {
            "token": "name",
            "type": 1,
          },
          Object {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": Object {
          "*": Object {
            "*": Object {
              "desc": "example 1",
              "text": "{name} has shared {=[number] photos} with you",
              "tokenAliases": Object {
                "=[number] photos": "=m2",
              },
            },
            "_1": Object {
              "desc": "example 1",
              "text": "{name} has shared {=a photo} with you",
              "tokenAliases": Object {
                "=a photo": "=m2",
              },
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 18,
      "project": "",
    },
    Object {
      "col_beg": 10,
      "col_end": 14,
      "hashToLeaf": Object {
        "2u1unDTClahYJKZKS5RVCQ==": Object {
          "desc": "In the phrase: \\"{name} has shared {=[number] photos} with you\\"",
          "text": "{=[number] photos}",
        },
        "dO3IlAx8hzcJVQxeQOUhkg==": Object {
          "desc": "In the phrase: \\"{name} has shared {=a photo} with you\\"",
          "text": "{=a photo}",
        },
      },
      "jsfbt": Object {
        "m": Array [
          Object {
            "token": "name",
            "type": 1,
          },
          Object {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": Object {
          "*": Object {
            "*": Object {
              "desc": "In the phrase: \\"{name} has shared {=[number] photos} with you\\"",
              "text": "{=[number] photos}",
              "tokenAliases": Object {
                "=[number] photos": "=m1",
              },
            },
            "_1": Object {
              "desc": "In the phrase: \\"{name} has shared {=a photo} with you\\"",
              "text": "{=a photo}",
              "tokenAliases": Object {
                "=a photo": "=m1",
              },
            },
          },
        },
      },
      "line_beg": 7,
      "line_end": 16,
      "project": "",
    },
    Object {
      "col_beg": 12,
      "col_end": 21,
      "hashToLeaf": Object {
        "Q9mOAQ+ogHG20z2QkEkNmQ==": Object {
          "desc": "In the phrase: \\"{name} has shared {=a photo} with you\\"",
          "text": "a photo",
        },
        "tYYOLLMbffdJQQlSVEVv/A==": Object {
          "desc": "In the phrase: \\"{name} has shared {=[number] photos} with you\\"",
          "text": "{number} photos",
        },
      },
      "jsfbt": Object {
        "m": Array [
          Object {
            "token": "name",
            "type": 1,
          },
          Object {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": Object {
          "*": Object {
            "*": Object {
              "desc": "In the phrase: \\"{name} has shared {=[number] photos} with you\\"",
              "text": "{number} photos",
            },
            "_1": Object {
              "desc": "In the phrase: \\"{name} has shared {=a photo} with you\\"",
              "text": "a photo",
            },
          },
        },
      },
      "line_beg": 8,
      "line_end": 15,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should create correct child parent mapping for multiple files 1`] = `
Object {
  "childParentMappings": Object {
    "1": 0,
    "2": 1,
    "4": 3,
  },
  "phrases": Array [
    Object {
      "col_beg": 12,
      "col_end": 18,
      "filepath": "example1.react.js",
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "some desc",
          "text": "This is a {=bold with italic inside}.",
          "tokenAliases": Object {
            "=bold with italic inside": "=m2",
          },
        },
      },
      "line_beg": 3,
      "line_end": 8,
      "project": "",
    },
    Object {
      "col_beg": 14,
      "col_end": 18,
      "filepath": "example1.react.js",
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "In the phrase: \\"This is a {=bold with italic inside}.\\"",
          "text": "bold with {=italic inside}",
          "tokenAliases": Object {
            "=italic inside": "=m1",
          },
        },
      },
      "line_beg": 5,
      "line_end": 7,
      "project": "",
    },
    Object {
      "col_beg": 26,
      "col_end": 46,
      "filepath": "example1.react.js",
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "In the phrase: \\"This is a bold with {=italic inside}.\\"",
          "text": "italic inside",
        },
      },
      "line_beg": 6,
      "line_end": 6,
      "project": "",
    },
    Object {
      "col_beg": 12,
      "col_end": 18,
      "filepath": "./example2.react.js.in",
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "some desc",
          "text": "Link: {=link}",
          "tokenAliases": Object {
            "=link": "=m1",
          },
        },
      },
      "line_beg": 3,
      "line_end": 6,
      "project": "",
    },
    Object {
      "col_beg": 14,
      "col_end": 57,
      "filepath": "./example2.react.js.in",
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "In the phrase: \\"Link: {=link}\\"",
          "text": "link",
        },
      },
      "line_beg": 5,
      "line_end": 5,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should dedupe fbt:plurals 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 6,
      "jsfbt": Object {
        "m": Array [
          null,
          Object {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": Object {
          "*": Object {
            "*": Object {
              "desc": "desc...",
              "text": "There are {number} photos.",
            },
          },
          "_1": Object {
            "_1": Object {
              "desc": "desc...",
              "text": "There is 1 photo.",
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 9,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should expose the outer token names if needed 1`] = `
Object {
  "childParentMappings": Object {
    "1": 0,
  },
  "phrases": Array [
    Object {
      "col_beg": 8,
      "col_end": 14,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "Expose outer token name when script option is given",
          "text": "Hello {=World}",
          "tokenAliases": Object {
            "=World": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
    },
    Object {
      "col_beg": 10,
      "col_end": 22,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "In the phrase: \\"Hello {=World}\\"",
          "outerTokenName": "=World",
          "text": "World",
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should expose the subject option on top level and inner phrases 1`] = `
Object {
  "childParentMappings": Object {
    "1": 0,
  },
  "phrases": Array [
    Object {
      "col_beg": 8,
      "col_end": 14,
      "jsfbt": Object {
        "m": Array [
          Object {
            "token": "__subject__",
            "type": 1,
          },
        ],
        "t": Object {
          "*": Object {
            "desc": "expose subject",
            "text": "You {=see the world}",
            "tokenAliases": Object {
              "=see the world": "=m1",
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
      "subject": Object {
        "end": 80,
        "loc": Object {
          "end": Object {
            "column": 52,
            "line": 2,
          },
          "identifierName": "aSubject",
          "start": Object {
            "column": 44,
            "line": 2,
          },
        },
        "name": "aSubject",
        "start": 72,
        "type": "Identifier",
      },
    },
    Object {
      "col_beg": 10,
      "col_end": 30,
      "jsfbt": Object {
        "m": Array [
          Object {
            "token": "__subject__",
            "type": 1,
          },
        ],
        "t": Object {
          "*": Object {
            "desc": "In the phrase: \\"You {=see the world}\\"",
            "text": "see the world",
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
      "subject": Object {
        "end": 80,
        "loc": Object {
          "end": Object {
            "column": 52,
            "line": 2,
          },
          "identifierName": "aSubject",
          "start": Object {
            "column": 44,
            "line": 2,
          },
        },
        "name": "aSubject",
        "start": 72,
        "type": "Identifier",
      },
    },
  ],
}
`;

exports[`collectFbt should extract common strings from <fbt common={true}> 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 6,
      "col_end": 39,
      "common": true,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbs strings 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 27,
      "col_end": 52,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt strings 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 27,
      "col_end": 52,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt.c strings 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 6,
      "col_end": 23,
      "common": true,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract strings from a custom collector 1`] = `
Object {
  "childParentMappings": Object {
    "1": 0,
  },
  "phrases": Array [
    Object {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "",
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "description",
          "text": "Hello {=World}!",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 3,
      "line_end": 5,
      "project": "",
    },
    Object {
      "col_beg": 16,
      "col_end": 38,
      "filepath": "",
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "In the phrase: \\"Hello {=World}!\\"",
          "outerTokenName": "=World",
          "text": "World",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract the author from Docblock 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "author": "Sponge Bob",
      "col_beg": 0,
      "col_end": 25,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should not expose the outer token names by default 1`] = `
Object {
  "childParentMappings": Object {
    "1": 0,
  },
  "phrases": Array [
    Object {
      "col_beg": 8,
      "col_end": 14,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "Do not expose outer token name by default",
          "text": "Hello {=World}",
          "tokenAliases": Object {
            "=World": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
    },
    Object {
      "col_beg": 10,
      "col_end": 22,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "In the phrase: \\"Hello {=World}\\"",
          "text": "World",
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should not throw because of CSX 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 25,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if fbt call param doNotExtract is set to false 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 40,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 2,
      "line_end": 2,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if file-level doNotExtract is set to false 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 25,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if in-line doNotExtract is set to false 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 46,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 2,
      "line_end": 2,
      "project": "",
    },
  ],
}
`;
